<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16sp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:fontFamily="@font/lexend"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textFontWeight="700"
                android:textSize="28sp" />

            <!--            <Button-->
            <!--                android:id="@+id/googleSignUp"-->
            <!--                style="?android:attr/borderlessButtonStyle"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginBottom="8dp"-->
            <!--                android:background="@drawable/btn_background"-->
            <!--                android:drawableStart="@drawable/gmail"-->
            <!--                android:drawablePadding="8dp"-->
            <!--                android:fontFamily="@font/lexend"-->
            <!--                android:lineHeight="21dp"-->
            <!--                android:paddingStart="102dp"-->
            <!--                android:text="@string/googleSignIn"-->
            <!--                android:textAlignment="textStart"-->
            <!--                android:textAllCaps="false"-->
            <!--                android:textColor="@color/textPrimary"-->
            <!--                android:textFontWeight="700"-->
            <!--                android:textSize="14sp"-->
            <!--                tools:ignore="RtlSymmetry" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView3"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginBottom="8dp"-->
            <!--                android:fontFamily="@font/lexend"-->
            <!--                android:text="@string/or"-->
            <!--                android:textAlignment="center"-->
            <!--                android:textColor="@color/textPrimary"-->
            <!--                android:textSize="16sp" />-->

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/first_name"
                android:inputType="textPassword"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/last_name"
                android:inputType="textPassword"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mobile_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:ems="10"
                android:fontFamily="@font/lexend"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/blood_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/blood_group"
                android:inputType="date"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/location"
                android:inputType="date"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/loginBackground"
                android:fontFamily="@font/lexend"
                android:paddingBottom="12dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/already_have_an_account"
                    android:textAllCaps="false"
                    android:textColor="@color/textPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/lexend"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/loginBackground"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>