<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/lexend"
                android:lineHeight="22.5sp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textFontWeight="700"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/lexend"
                android:lineHeight="35sp"
                android:paddingTop="20dp"
                android:paddingBottom="12dp"
                android:text="@string/app_welcome"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textFontWeight="700"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/lexend"
                android:lineHeight="24dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="12dp"
                android:text="@string/desc"
                android:textAlignment="center"
                android:textColor="@color/textPrimary"
                android:textSize="16sp" />

            <!--            <Button-->
            <!--                android:id="@+id/button2"-->
            <!--                style="?android:attr/borderlessButtonStyle"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginBottom="8dp"-->
            <!--                android:background="@drawable/btn_background"-->
            <!--                android:drawableStart="@drawable/gmail"-->
            <!--                android:drawablePadding="8dp"-->
            <!--                android:fontFamily="@font/lexend"-->
            <!--                android:lineHeight="21dp"-->
            <!--                android:paddingStart="102dp"-->
            <!--                android:text="@string/googleSignIn"-->
            <!--                android:textAlignment="textStart"-->
            <!--                android:textAllCaps="false"-->
            <!--                android:textColor="@color/textPrimary"-->
            <!--                android:textFontWeight="700"-->
            <!--                android:textSize="14sp"-->
            <!--                android:onClick="mainLoad"-->
            <!--                tools:ignore="RtlSymmetry" />-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView3"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginBottom="8dp"-->
            <!--                android:fontFamily="@font/lexend"-->
            <!--                android:text="@string/or"-->
            <!--                android:textAlignment="center"-->
            <!--                android:textColor="@color/textPrimary"-->
            <!--                android:textSize="16sp" />-->

            <EditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="#8C92AC"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:autofillHints=""
                android:background="@drawable/editable_text"
                android:fontFamily="@font/lexend"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16sp"
                android:text=""
                android:textColor="@color/textPrimary"
                android:textColorHint="@color/TextHint"
                android:textSize="16sp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/loginBackground"
                android:fontFamily="@font/lexend"
                android:onClick="login"
                android:paddingBottom="12dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/lexend"
                    android:text="@string/don_t_have_and_account"
                    android:textAllCaps="false"
                    android:textColor="@color/textPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/lexend"
                    android:onClick="signUp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/loginBackground"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>